objects/School__c.object
<CustomObject>
    <description>Just for testing</description>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDC_without_uat__c</fullName>
        <label>CDC without uat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_1__c</fullName>
        <label>CT 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_2__c</fullName>
        <label>CT 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <inlineHelpText>Student Class ?</inlineHelpText>
        <label>Class</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <inlineHelpText>Mobile number</inlineHelpText>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Coonection_behavior__c</fullName>
        <label>Coonection behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Details__c</fullName>
        <label>Parent Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_contact_disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary contact disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promoted_To__c</fullName>
        <formula>Class__c  + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promoted To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roll_back_1__c</fullName>
        <label>Roll back 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_back_2__c</fullName>
        <label>Roll back 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <inlineHelpText>Email</inlineHelpText>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <inlineHelpText>New Student</inlineHelpText>
        <label>Student Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Studying__c</fullName>
        <formula>Age__c  - 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <inlineHelpText>Student can choose the subjects</inlineHelpText>
        <label>Subjects</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English,</fullName>
                </value>
                <value>
                    <fullName>Hindi,</fullName>
                </value>
                <value>
                    <fullName>Maths,</fullName>
                </value>
                <value>
                    <fullName>Science.</fullName>
                </value>
                <value>
                    <fullName>Social,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_956__c</fullName>
        <label>Test_956</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Connection_beharvior__c</fullName>
        <label>Test Connection beharvior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ct3__c</fullName>
        <label>ct3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ct4__c</fullName>
        <label>ct4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>School</label>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <recordTypes>
        <fullName>New_Student</fullName>
        <active>true</active>
        <label>New Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>